2005-03-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Created release for
	0.8.10.

	* lib/rubygems/gem_commands.rb
	(Gem::UpdateCommand::do_rubygems_update): Update --system now runs
	the ruby command directly rather than trying to load teh
	update-rubygems command.  There were too many things to go wrong
	with the old way.

2005-03-24  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::find_dependencies_not_installed): Fixed to
	reload source index before attempting to detect dependencies.

2005-03-23  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::find_dependencies_not_installed): Switched
	to using SourceIndex#find_name to detect missing dependencies,
	avoiding a gem activation during an install.

	* lib/rubygems/installer.rb (Gem::Installer::install): Removed
	activate call from install step.  If we need to do something about
	dependencies at this time, then we need a better way to do them.

	* lib/rubygems.rb: Removed the require for rubygems/timer.

2005-03-16  Jim Weirich  <jim@weirichhouse.org>

	* test/gemenvironment.rb (TestEnvironment::create): Added require
	on gem/builder.

	* lib/rubygems/source_index.rb (Gem::SourceIndex::initialize):
	Allowing default argument to new to be an empty hash.
	(Gem::SourceIndex::from_installed_gems): Refactored into a class
	method that invokes a instance method.
	(Gem::SourceIndex::refresh): Refresh now does a complete reload
	from disk.  This should be more accurate that the earlier version.

	* lib/rubygems/installer.rb (Gem::Uninstaller::uninstall): removed
	unneeded refresh!.

	* lib/rubygems.rb (Gem::Exception::source_index): Removed
	automatic refresh from Gem.source_index ... it wasn't reliable
	when removing installed gems.
	(Gem::Exception::activate): Added detection of previously loaded
	gems.

2005-03-15  Chad Fowler  <chad@chadfowler.com>
