@@ -1,3 +1,7 @@
+2005-04-03  Chad Fowler <chad@chadfowler.com>
+
+	* pre-install.rb: Added version check to RubyGems installation.
+
 2005-03-25  Jim Weirich  <jim@weirichhouse.org>
 
 	* lib/rubygems/rubygems_version.rb (Gem): Created release for
